// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkoutExerciseCard variants matches the live snapshot 1`] = `
<View
  style={
    {
      "gap": 7,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 7,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#292116",
        },
      ]
    }
    testID="exercise-group-chip"
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "width": 6,
          },
          {
            "backgroundColor": "#F0A537",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 10,
            "fontWeight": "400",
          },
          {
            "color": "#F7D097",
          },
        ]
      }
    >
      Chest
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#1A1C1F",
          "borderColor": "#2A2D31",
          "borderRadius": 10,
          "borderWidth": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        },
        false,
      ]
    }
    testID="exercise-card-session-exercise-1"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 3,
          }
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 16,
              "fontWeight": "500",
            }
          }
        >
          Bench press
        </Text>
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 12,
            }
          }
        >
          Barbell
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 7,
          }
        }
      >
        <View
          testID="exercise-rir"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "paddingHorizontal": 7,
                  "paddingVertical": 6,
                },
                {
                  "backgroundColor": "#1A1C1F",
                  "borderColor": "#2A2D31",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 10,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#C9CDD2",
                  },
                ]
              }
            >
              2 RIR
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Bench press history"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M4.5 4.5V9H9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M12 8v4l3 2"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          accessibilityLabel="Bench press menu"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGCircle
                  cx={5.5}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
                <RNSVGCircle
                  cx={12}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
                <RNSVGCircle
                  cx={18.5}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Weight, kg
      </Text>
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Reps
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <Text
          style={
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            }
          }
        >
          Log
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-1"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        1
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F5F5F4",
                "fontSize": 15,
                "fontWeight": "400",
              }
            }
          >
            10
          </Text>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 13,
              }
            }
          >
            ✓
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              {
                "backgroundColor": "#CDFF57",
                "borderColor": "#CDFF57",
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4280494858,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M5 12.5l4.5 4.5L19 7.5"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-2"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        2
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "borderColor": "#2A2D31",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "borderColor": "#2A2D31",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          10
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              {
                "borderColor": "#CDFF57",
              },
              false,
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-3"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        3
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "borderColor": "#2A2D31",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "borderColor": "#2A2D31",
              "borderRadius": 9,
              "borderWidth": 1,
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          10
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              false,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`WorkoutExerciseCard variants matches the preview snapshot 1`] = `
<View
  style={
    {
      "gap": 7,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 7,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#292116",
        },
      ]
    }
    testID="exercise-group-chip"
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "width": 6,
          },
          {
            "backgroundColor": "#F0A537",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 10,
            "fontWeight": "400",
          },
          {
            "color": "#F7D097",
          },
        ]
      }
    >
      Chest
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#1A1C1F",
          "borderColor": "#2A2D31",
          "borderRadius": 10,
          "borderWidth": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        },
        false,
      ]
    }
    testID="exercise-card-session-exercise-1"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 3,
          }
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 16,
              "fontWeight": "500",
            }
          }
        >
          Bench press
        </Text>
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 12,
            }
          }
        >
          Barbell
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 7,
          }
        }
      >
        <View
          accessibilityLabel="Bench press history"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M4.5 4.5V9H9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M12 8v4l3 2"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0E0F11",
          "borderColor": "#2A2D31",
          "borderRadius": 9,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 7,
          "paddingHorizontal": 10,
          "paddingVertical": 7,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
              ]
            }
            stroke={
              {
                "payload": 4287271065,
                "type": 0,
              }
            }
            strokeWidth={1.8}
          >
            <RNSVGCircle
              cx={12}
              cy={12}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              r={8.5}
            />
            <RNSVGPath
              d="M12 11v5M12 8h.01"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                [
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              strokeLinecap={1}
              strokeLinejoin={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          {
            "color": "#8A9099",
            "fontSize": 13,
            "fontWeight": "400",
          }
        }
      >
        Not programmed yet
      </Text>
    </View>
  </View>
</View>
`;

exports[`WorkoutExerciseCard variants matches the read-only snapshot 1`] = `
<View
  style={
    {
      "gap": 7,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 7,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#292116",
        },
      ]
    }
    testID="exercise-group-chip"
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "width": 6,
          },
          {
            "backgroundColor": "#F0A537",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 10,
            "fontWeight": "400",
          },
          {
            "color": "#F7D097",
          },
        ]
      }
    >
      Chest
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#1A1C1F",
          "borderColor": "#2A2D31",
          "borderRadius": 10,
          "borderWidth": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        },
        false,
      ]
    }
    testID="exercise-card-session-exercise-1"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 3,
          }
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 16,
              "fontWeight": "500",
            }
          }
        >
          Bench press
        </Text>
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 12,
            }
          }
        >
          Barbell
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 7,
          }
        }
      >
        <View
          testID="exercise-rir"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "paddingHorizontal": 7,
                  "paddingVertical": 6,
                },
                {
                  "backgroundColor": "#1A1C1F",
                  "borderColor": "#2A2D31",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 10,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#C9CDD2",
                  },
                ]
              }
            >
              2 RIR
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Bench press history"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M4.5 4.5V9H9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M12 8v4l3 2"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Weight, kg
      </Text>
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Reps
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <Text
          style={
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            }
          }
        >
          Log
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-1"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        1
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F5F5F4",
                "fontSize": 15,
                "fontWeight": "400",
              }
            }
          >
            10
          </Text>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 13,
              }
            }
          >
            ✓
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              {
                "backgroundColor": "#CDFF57",
                "borderColor": "#CDFF57",
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4280494858,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M5 12.5l4.5 4.5L19 7.5"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-2"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        2
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F5F5F4",
                "fontSize": 15,
                "fontWeight": "400",
              }
            }
          >
            11
          </Text>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 13,
              }
            }
          >
            +1
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              {
                "backgroundColor": "#CDFF57",
                "borderColor": "#CDFF57",
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4280494858,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M5 12.5l4.5 4.5L19 7.5"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-3"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        3
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F5F5F4",
                "fontSize": 15,
                "fontWeight": "400",
              }
            }
          >
            9
          </Text>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 13,
              }
            }
          >
            −1
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              {
                "backgroundColor": "#CDFF57",
                "borderColor": "#CDFF57",
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4280494858,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M5 12.5l4.5 4.5L19 7.5"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`WorkoutExerciseCard variants matches the skipped snapshot 1`] = `
<View
  style={
    {
      "gap": 7,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 7,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#292116",
        },
      ]
    }
    testID="exercise-group-chip"
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "width": 6,
          },
          {
            "backgroundColor": "#F0A537",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 10,
            "fontWeight": "400",
          },
          {
            "color": "#F7D097",
          },
        ]
      }
    >
      Chest
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#1A1C1F",
          "borderColor": "#2A2D31",
          "borderRadius": 10,
          "borderWidth": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        },
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="exercise-card-session-exercise-1"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 3,
          }
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 16,
              "fontWeight": "500",
            }
          }
        >
          Bench press
        </Text>
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 12,
            }
          }
        >
          Barbell
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 7,
          }
        }
      >
        <View
          testID="exercise-rir"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "paddingHorizontal": 7,
                  "paddingVertical": 6,
                },
                {
                  "backgroundColor": "#1A1C1F",
                  "borderColor": "#2A2D31",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 10,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#C9CDD2",
                  },
                ]
              }
            >
              2 RIR
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Bench press history"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M4.5 4.5V9H9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M12 8v4l3 2"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Weight, kg
      </Text>
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Reps
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <Text
          style={
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            }
          }
        >
          Log
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#8A9099",
          "fontSize": 13,
        }
      }
    >
      Skipped
    </Text>
  </View>
</View>
`;

exports[`WorkoutExerciseCard variants matches the skipped with some sets logged snapshot 1`] = `
<View
  style={
    {
      "gap": 7,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 20,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 7,
          "paddingVertical": 6,
        },
        {
          "backgroundColor": "#292116",
        },
      ]
    }
    testID="exercise-group-chip"
  >
    <View
      style={
        [
          {
            "borderRadius": 3,
            "height": 6,
            "width": 6,
          },
          {
            "backgroundColor": "#F0A537",
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 10,
            "fontWeight": "400",
          },
          {
            "color": "#F7D097",
          },
        ]
      }
    >
      Chest
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#1A1C1F",
          "borderColor": "#2A2D31",
          "borderRadius": 10,
          "borderWidth": 1,
          "gap": 10,
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        },
        {
          "opacity": 0.5,
        },
      ]
    }
    testID="exercise-card-session-exercise-1"
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 3,
          }
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 16,
              "fontWeight": "500",
            }
          }
        >
          Bench press
        </Text>
        <Text
          style={
            {
              "color": "#6B7076",
              "fontSize": 12,
            }
          }
        >
          Barbell
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 7,
          }
        }
      >
        <View
          testID="exercise-rir"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "flex-start",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "paddingHorizontal": 7,
                  "paddingVertical": 6,
                },
                {
                  "backgroundColor": "#1A1C1F",
                  "borderColor": "#2A2D31",
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 10,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#C9CDD2",
                  },
                ]
              }
            >
              2 RIR
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="Bench press history"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M4.5 12a7.5 7.5 0 1 0 2.2-5.3L4.5 9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M4.5 4.5V9H9"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
                <RNSVGPath
                  d="M12 8v4l3 2"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          accessibilityLabel="Bench press menu"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 15,
                "height": 30,
                "justifyContent": "center",
                "width": 30,
              },
              {
                "backgroundColor": "#1A1C1F",
              },
              false,
              false,
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={18}
            bbWidth={18}
            focusable={false}
            height={18}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 18,
                  "width": 18,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={18}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4291415506,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGCircle
                  cx={5.5}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
                <RNSVGCircle
                  cx={12}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
                <RNSVGCircle
                  cx={18.5}
                  cy={12}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  r={0.9}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
    >
      <View
        style={
          {
            "width": 20,
          }
        }
      />
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Weight, kg
      </Text>
      <Text
        style={
          [
            {
              "flex": 1,
            },
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            },
          ]
        }
      >
        Reps
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <Text
          style={
            {
              "color": "#8A9099",
              "fontSize": 11,
              "fontWeight": "400",
              "letterSpacing": 0.04,
            }
          }
        >
          Log
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 7,
        }
      }
      testID="set-row-1"
    >
      <Text
        style={
          [
            {
              "width": 20,
            },
            {
              "color": "#6B7076",
              "fontSize": 15,
            },
          ]
        }
      >
        1
      </Text>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#F5F5F4",
              "fontSize": 15,
              "fontWeight": "400",
            }
          }
        >
          62.5
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 1,
            },
            {
              "height": 34,
              "justifyContent": "center",
              "paddingHorizontal": 7,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "baseline",
              "flexDirection": "row",
              "gap": 6,
            }
          }
        >
          <Text
            style={
              {
                "color": "#F5F5F4",
                "fontSize": 15,
                "fontWeight": "400",
              }
            }
          >
            10
          </Text>
          <Text
            style={
              {
                "color": "#8A9099",
                "fontSize": 13,
              }
            }
          >
            ✓
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "width": 34,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderColor": "#2A2D31",
                "borderRadius": 9,
                "borderWidth": 1,
                "height": 34,
                "justifyContent": "center",
                "width": 34,
              },
              false,
              {
                "backgroundColor": "#CDFF57",
                "borderColor": "#CDFF57",
              },
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={16}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGGroup
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "payload": 4280494858,
                    "type": 0,
                  }
                }
                strokeWidth={1.8}
              >
                <RNSVGPath
                  d="M5 12.5l4.5 4.5L19 7.5"
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#8A9099",
          "fontSize": 13,
        }
      }
    >
      Skipped
    </Text>
  </View>
</View>
`;
